2021-01-23 SQLite-based activity counter